--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>ARTFULBITES</h1>
-								<p>Meet the dynamic Mediterraanean brothers, Daniel, Pedro and Adam, whose passion for food, knowledge, and creativity knows no bounds. They're on a mission to entertain and educate the world through animated culinary adventures while also delving into the realms of copywriting and e-commerce with innovation as their guiding star. <a href="https://www.youtube.com/channel/UCAZdSZFKP08cVDuMddoCNWQ">@Youtube</a> <br />
+								<p>Meet the dynamic Mediterraanean brothers, Daniel, Pedro and Adam, whose passion for food, knowledge, and creativity knows no bounds. They're on a mission to entertain and educate the world through animated culinary adventures while also delving into the realms of copywriting and ecommerce with innovation as their guiding star. <a href="https://www.youtube.com/channel/UCAZdSZFKP08cVDuMddoCNWQ">@Youtube</a> <br />
 					
 							</div>
 						</div>
@@ -47,15 +47,15 @@
 							<article id="Info">
 								<h2 class="major">Info</h2>
 								<span class="image main"><img src="images/Screenshot 2023-09-11 062052.png" alt="" /></span>
-								<p>Culinary Maestros:With an unquenchable passion for food, Daniel, Pedro and Adam have honed their culinary skills to perfection. Their mission is to whisk you away on an animated, entertaining, and educational adventure through the tantalizing world of cuisine. From mastering international flavors to pioneering fusion culinary creations, they share their vast culinary wisdom, making global gastronomy accessible to all. <a href="#FoodStuff">FoodStuff</a>.</p>
-								<p>Creative Entrepreneurs:Beyond the kitchen, the trio demonstrates their creativity in the world of words and commerce. They are not only masters of copywriting but also dedicated to helping other businesses grow and thrive by crafting compelling narratives. In the realm of e-commerce, they don the hat of entrepreneurs, turning visionary ideas into prosperous online ventures.<a href="#CopyWriting">CopyWriting/ E-commerce</a>.</p>
+								<p>Culinary Maestros: With an unquenchable passion for food, Daniel, Pedro and Adam have honed their culinary skills to perfection. Their mission is to whisk you away on an animated, entertaining, and educational adventure through the tantalizing world of cuisine. From mastering international flavours to pioneering fusion culinary creations, they share their vast culinary wisdom, making global gastronomy accessible to all. <a href="#FoodStuff">FoodStuff</a>.</p>
+								<p>Creative Entrepreneurs: Beyond the kitchen, the trio demonstrates their creativity in the world of words and e-commerce. They are not only masters of copywriting but also dedicated to helping other businesses grow and thrive by crafting compelling narratives. In the realm of e-commerce, they don the hat of entrepreneurs, turning visionary ideas into prosperous online ventures.<a href="#CopyWriting">CopyWriting/ E-commerce</a>.</p>
 							</article>
 
 						<!-- FoodStuff-->
 							<article id="FoodStuff">
 								<h2 class="major">FoodStuff</h2>
 								<span class="image main"><img src="images/IMG_20231013_215120_103.jpg" alt="" /></span>
-								<p>With an unquenchable passion for food, Daniel, Pedro and Adam have honed their culinary skills to perfection. Their mission is to whisk you away on an animated, entertaining, and educational adventure through the tantalizing world of cuisine. From mastering international flavors to pioneering fusion culinary creations, they share their vast culinary wisdom, making global gastronomy accessible to all.</p>	<li><a href="https://www.youtube.com/channel/UCAZdSZFKP08cVDuMddoCNWQ" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+								<p>Drenched in an unwavering passion for the art of food, Daniel, Pedro, and Adam have meticulously honed their culinary skills to absolute perfection. Their mission? To whisk you away on an animated, engaging, and enlightening expedition through the delectable universe of cuisine. From mastering the intricate tapestry of international flavors to pioneering groundbreaking fusion culinary creations, they generously share their extensive culinary wisdom, making the captivating world of global gastronomy accessible to all, while ensuring it's a delightful adventure along the way.</p>	<li><a href="https://www.youtube.com/channel/UCAZdSZFKP08cVDuMddoCNWQ" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 							</article>
 
 						<!-- CopyWriting -->
