--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>ARTFULBITES</h1>
-								<p>Meet the dynamic Mediterraanean brothers, Daniel, Pedro and Adam, whose passion for food, knowledge, and creativity knows no bounds. They're on a mission to entertain and educate the world through animated culinary adventures while also delving into the realms of copywriting and ecommerce with innovation as their guiding star. <a href="https://www.youtube.com/channel/UCAZdSZFKP08cVDuMddoCNWQ">@Youtube</a> <br />
+								<p>Meet the dynamic Mediterranean brothers, Daniel, Pedro and Adam, whose passion for food, knowledge, and creativity knows no bounds. They're on a mission to entertain and educate the world through animated culinary adventures while also delving into the realms of copywriting and ecommerce with innovation as their guiding star. <a href="https://www.youtube.com/channel/UCAZdSZFKP08cVDuMddoCNWQ">@Youtube</a> <br />
 					
 							</div>
 						</div>
