--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<span class="image main"><img src="images/title_page_image.png" alt="" /></span>
 								<p>Copywriting: Beyond the kitchen, Daniel, Pedro and Adam excel in the world of words. Their copywriting prowess isn't limited to their own projects; they extend a helping hand to businesses looking to grow and achieve success. With their copywriting expertise, they assist businesses in conveying their message with precision, style, and impact, ultimately helping them flourish and prosper.
 									              
-									                                E-commerce Entrepreneurs: The brothers have ventured into the world of e-commerce, turning innovative ideas into thriving online businesses. They not only succeed themselves but also help others transform concepts into reality, sharing the journey from idea to marketing and sales strategies. Witness how they empower businesses to grow and become more successful.</p>	<li><a href="https://artfulbites.co" class="icon brands fa-shopify"><span class="label">Shopify</span></a></li>
+									<li><a href="https://artfulbites.co" class="icon brands fa-shopify"><span class="label">Shopify</span></a></li>  E-commerce Entrepreneurs: The brothers have ventured into the world of e-commerce, turning innovative ideas into thriving online businesses. They not only succeed themselves but also help others transform concepts into reality, sharing the journey from idea to marketing and sales strategies. Witness how they empower businesses to grow and become more successful.</p>	
 							</article>
 
 						<!-- Contact -->
